# HydroChal_Sensors

./: .gitignore  CMakeLists.txt  README.md
IMU/: README.md
Logger/: README.md  main.c
Monitoring/: config.txt  monitor.bash  monitor.sh
RXFromRC/: README.md  sbuslib.py
RXFromRC_cpp/: CMakeLists.txt  README.md  main.cpp
RXFromRC_python/: rx.py
